Bug 1058712, e10s, support for copy image command, r=ehsan,mconley